Fix video overflow in flex layout

--- a/FishSauceGames/Pages/MineAwareVR.razor.css
+++ b/FishSauceGames/Pages/MineAwareVR.razor.css
@@ -55,6 +55,7 @@
 
 .description-media {
     flex: 1;
+    min-width: 0;
 }
 
 .description-media img,
@@ -75,6 +76,7 @@
 
 .experience-media {
     flex: 1;
+    min-width: 0;
 }
 
 .experience-media img,
